kubernetes/Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: nonprod
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: 192.168.23.23
spec:
  rules:
    - http:
        paths:
          - path: /adservice
            pathType: Prefix
            backend:
              service:
                name: adservice
                port:
                  number: 9555
          - path: /currencyservice
            pathType: Prefix
            backend:
              service:
                name: currencyservice
                port:
                  number: 7000
          - path: /cartservice
            pathType: Prefix
            backend:
              service:
                name: cartservice
                port:
                  number: 7070
          - path: /checkoutservice
            pathType: Prefix
            backend:
              service:
                name: checkoutservice
                port:
                  number: 5050
          - path: /emailservice
            pathType: Prefix
            backend:
              service:
                name: emailservice
                port:
                  number: 8090
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
          - path: /paymentservice
            pathType: Prefix
            backend:
              service:
                name: paymentservice
                port:
                  number: 4051
          - path: /productcatalogservice
            pathType: Prefix
            backend:
              service:
                name: productcatalogservice
                port:
                  number: 3550
          - path: /recommendationservice
            pathType: Prefix
            backend:
              service:
                name: recommendationservice
                port:
                  number: 8085
          - path: /shippingservice
            pathType: Prefix
            backend:
              service:
                name: shippingservice
                port:
                  number: 50051
          - path: /load-test
            pathType: Prefix
            backend:
              service:
                name: loadgenerator
                port:
                  number: 8080
                  

status:
  loadBalancer:
    ingress:
      - ip: 10.0.0.10
